add more multiprocessing options

--- a/decode/utils/reference_files/reference.yaml
+++ b/decode/utils/reference_files/reference.yaml
@@ -14,7 +14,9 @@ Camera:
     read_sigma:
     spur_noise:
 Computing:
-  multiprocessing_sharing_strategy: file_system
+  multiprocessing:
+    sharing_strategy: file_system
+    start_method:
   precision: 32
 Evaluation:
   dist_ax: 500.0
