--- a/decode/utils/reference_files/reference.yaml
+++ b/decode/utils/reference_files/reference.yaml
@@ -65,7 +65,7 @@ Model:
     skip_gn_level:
     up_mode: upsample
     use_last_nl:
-  channels_in: 3
+  ch_in_map: [[0], [1], [2]]
 Optimizer:
   name: AdamW
   specs:
